--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,30 @@ body, html {
 
 .container {
     display: flex;
-    height: 100%;
+}
+
+#toggle-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    z-index: 5;
 }
 
 .sidebar {
-    /* width: 250px; */
+    position: fixed;
+    top: 0;
+    right: 0;
     width: 30%;
     background-color: #35424a;
     color: white;
     padding: 20px;
-    position: fixed;
     height: 100%;
     overflow-y: auto;
+
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
 }
 
 .sidebar h1 {
@@ -43,16 +55,53 @@ body, html {
     text-decoration: none;
 }
 
-/* #home img {
+.sidebar.visible {
+    transform: translateX(0);
+}
+
+.hidden {
+    transform: translateX(100%);
+}
+
+#greeting {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: -5;
+}
+
+#background-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.centered-text {
     position: absolute;
-} */
+    top: 50%;
+    left: 50%;
+    transform: translate(-90%, -100%);
+    z-index: 2;
+    margin: 50px;
+    font-size: 1.5em;
+    padding: 20px;
+    background-color: rgba(244, 244, 244, 0.8); 
+    border-radius: 10px;
+}
 
 .content {
     flex-grow: 1;
-    margin-left: 30%;
     padding: 20px;
     overflow-y: auto;
     height: 100%;
+    transition: margin-right 0.3s ease;  
+}
+
+.content.has-sidebar {
+    margin-right: 30%;  
 }
 
 .section {
@@ -64,14 +113,6 @@ body, html {
     margin-left: 50px;
     margin-right: 50px;
 }
-
-
-/* .centered-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-} */
 
 .project {
     background-color: #f4f4f4;
