--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body, html {
     height: 100%;
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -20,19 +21,20 @@ body, html {
     right: 20px;
     padding: 10px 20px;
     cursor: pointer;
-    z-index: 5;
+    z-index: 10;
 }
 
 .sidebar {
     position: fixed;
     top: 0;
     right: 0;
-    width: 30%;
+    width: 25%;
     background-color: #35424a;
     color: white;
     padding: 20px;
     height: 100%;
     overflow-y: auto;
+    z-index: 9;
 
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
@@ -70,26 +72,55 @@ body, html {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    z-index: -5;
+    z-index: 5;
+}
+
+#portfolio-btn {
+    font-size: 1em;
+    border-radius: 50px;
+    padding: 20px;
+    margin: 5px;
+    margin-top: 20px;
+    border: none;
+    background-color: antiquewhite;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#portfolio-btn:hover {
+    background-color: #d6c29a; 
 }
 
 #background-image {
     width: 100%;
     height: auto;
     object-fit: cover;
+    z-index: -5;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
 }
 
 .centered-text {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-90%, -100%);
+    transform: translate(-60%, -57.5%);
     z-index: 2;
     margin: 50px;
     font-size: 1.5em;
     padding: 20px;
-    background-color: rgba(244, 244, 244, 0.8); 
+    /* background-color: rgba(84, 84, 84, 0.5);  */
+    color:antiquewhite;
     border-radius: 10px;
+    text-align: center;
 }
 
 .content {
@@ -101,11 +132,16 @@ body, html {
 }
 
 .content.has-sidebar {
-    margin-right: 30%;  
+    margin-right: 25%;  
 }
 
 .section {
     margin-bottom: 40px;
+}
+
+.card-container {
+    display: flex;
+    gap: 20px;
 }
 
 #home {
