--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body, html {
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: 'Afacad Flux', Arial, sans-serif;
     line-height: 1.6;
     scroll-behavior: smooth;
 }
@@ -76,9 +76,9 @@ body, html {
 }
 
 #portfolio-btn {
-    font-size: 1em;
+    font-size: 0.8em;
     border-radius: 50px;
-    padding: 20px;
+    padding: 25px;
     margin: 5px;
     margin-top: 20px;
     border: none;
@@ -117,7 +117,6 @@ body, html {
     margin: 50px;
     font-size: 1.5em;
     padding: 20px;
-    /* background-color: rgba(84, 84, 84, 0.5);  */
     color:antiquewhite;
     border-radius: 10px;
     text-align: center;
@@ -136,12 +135,12 @@ body, html {
 }
 
 .section {
+    text-align: center;
     margin-bottom: 40px;
 }
 
-.card-container {
-    display: flex;
-    gap: 20px;
+.section-title {
+    margin: 1em auto;
 }
 
 #home {
@@ -150,11 +149,69 @@ body, html {
     margin-right: 50px;
 }
 
+.card-container {
+    display: flex;
+    /* flex-flow: row wrap; */
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 .project {
     background-color: #f4f4f4;
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
+    height: auto;
+    width: 48%;
+}
+
+.img-carousel {
+    position: relative;
+    overflow: hidden; /* Hide overflow for sliding effect */
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    color: white;
+    border: none;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.arrow.left {
+    left: 10px;
+}
+
+.arrow.right {
+    right: 10px;
+}
+
+.arrow:hover {
+    background-color: rgba(0, 0, 0, 0.7); /* Darker on hover */
+}
+
+.image-container {
+    display: flex;
+    /* background-color: black; */
+    width: 100%;
+    height: 300px;
+    transition: transform 0.5s ease-in-out;
+    will-change: transform;
+}
+
+.image-container img {
+    width: 100%; 
+    height: 100%; 
+    flex-shrink: 0; 
+    object-fit: cover; 
 }
 
 .resume-section {
