--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,20 @@ body, html {
     margin-right: 50px;
 }
 
+#about {
+    background-color: #f4f4f4;
+    padding: 20px; /* Add padding for spacing within the section */
+    margin: 0; /* Remove any default margin */
+    width: 100%; /* Ensure it spans the full width */
+}
+
+#contact {
+    background-color: #f4f4f4;
+    padding: 20px; /* Add padding for spacing within the section */
+    margin: 0; /* Remove any default margin */
+    width: 100%; /* Ensure it spans the full width */
+}
+
 .card-container {
     display: flex;
     /* flex-flow: row wrap; */
@@ -183,7 +197,7 @@ body, html {
     border-radius: 50%;
     padding: 10px;
     cursor: pointer;
-    z-index: 10;
+    z-index: 50;
 }
 
 .arrow.left {
@@ -215,6 +229,7 @@ body, html {
 }
 
 .resume-section {
+    text-align: left;
     margin-bottom: 20px;
 }
 
